...
                    disabledContainerColor = MaterialTheme.colorScheme.onPrimary
                )
            },
        modifier = Modifier
            .size(60.dp)
            .clip(shape = RoundedCornerShape(size = 100.dp))
            .testTag("next_button")
    ) {
        Icon(
            imageVector = Icons.AutoMirrored.Filled.KeyboardArrowRight,
            contentDescription = "next_button",
            tint =
                if (!onPrimary) {
...
