...
            }
        }
        Spacer(modifier = Modifier.weight(1f))
        Column() {
            ItemCard(
                imageId = R.drawable.reading,
                title = "Tạo bài đọc",
                onClick = onReadingClick
            )
            Spacer(modifier = Modifier.height(32.dp))
            ItemCard(
                imageId = R.drawable.listening,
                title = "Tạo bài nghe",
                onClick = onListeningClick
            )
            Spacer(modifier = Modifier.height(32.dp))
            ItemCard(
                imageId = R.drawable.backpack1,
                title = "Balo đề",
                onClick = onBackpackClick
            )
        }
        Spacer(modifier = Modifier.weight(0.4f))

    }
...
