...
                contentDescription = "backpack1"
            )
            Spacer(modifier = Modifier.weight(1f))
            Column() {
                ItemCard(
                    imageId = R.drawable.backpack2,
                    title = "Đề bài đọc",
                    onClick = onReadingListClick
                )
                Spacer(modifier = Modifier.height(32.dp))
                ItemCard(
                    imageId = R.drawable.backpack1,
                    title = "Đề bài nghe",
...
